src/main/resources/Patterns/CacheAside/httpcache/proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-proxy-async
  namespace: ${NAMESPACE}
  labels:
    app: pattern
spec:
  replicas: 4
  selector:
    matchLabels:
      app: cache-proxy-async
  template:
    metadata:
      labels:
        app: cache-proxy-async
        pattern-managed: "true"
        pattern-type: "cache-aside"
    spec:
      containers:
        - name: cache-proxy
          image: cache-proxy-async:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
