src/main/resources/Patterns/CacheAside/httpcache/cache-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cache-proxy-ingress
  namespace: pattern
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /tools.descartes.teastore.webui
            pathType: Prefix
            backend:
              service:
                name: cache-proxy-async
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ingress-nginx-controller
  namespace: pattern
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: nginx-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 32477
    - name: https
      port: 443
      targetPort: https
      nodePort: 32655
